--- a/weather-app/WeatherApp/www/index.html
+++ b/weather-app/WeatherApp/www/index.html
@@ -3,7 +3,7 @@
     <head>
     <!--
         Customize the content security policy in the meta tag below as needed. Add 'unsafe-inline' to default-src to enable inline JavaScript.
-        For details, see http://go.microsoft.com/fwlink/?LinkID=617521
+        For details, see http://go.microsoft.com/fwlink/?LinkID=6175211212
     -->
         <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com http://api.openweathermap.org 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
         
